Various Fixes
After some merge issues there was a special character that is invisible
in Web Matrix that was causing alignment issues. Fixed.

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -126,6 +126,10 @@ body {
     font-size: 3.5em;
 }
 
+.sub-title {
+    border-bottom: 2px solid #ecf0f1;
+    margin-bottom: 10px;
+}
 
 footer {
     background-color: #2C3E50;
@@ -443,11 +447,6 @@ img {
     margin-bottom: 20px;
 }
 
-.updates-title {
-    border-bottom: 2px solid #ecf0f1;
-    margin-bottom: 10px;
-}
-
 .updates h2 {
     margin-top: 0px;
 }
@@ -529,7 +528,7 @@ img {
 
 
 /* -------------------------- VIEW NEED CSS ---------------------------*/
-#description{
+.description{
     padding: 10px;
     border: 1px solid #E2E2E2;
     border-radius: 10px;
